[package]
name = "looker"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.58"
chrono = { version = "0.4.19", features = ["serde"] }
getopts = "0.2.21"
regex = "1.10"
rhai = { version = "1.14", features = ["serde"] }
serde = { version = "1.0.138", features = ["derive"] }
serde_json = "1.0.82"
serde_repr = "0.1.8"
sha2 = "0.10.8"
